Additional media query and added bandaid fix for header overflow.

--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,7 @@ button {
     text-align: center;
     font-family: 'Azeret Mono', monospace;
     font-size: 2.5rem;
+    overflow-wrap: break-word;
     background-color: #bac5d6;
 }
 
@@ -244,5 +245,9 @@ button {
 @media (max-width: 400px) {
     #header {
         font-size: 1.5rem;
+    }
+
+    #buttons {
+        margin: 0;
     }
 }
